# froggy

./: .gitignore  .gsd  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.mulch/: mulch.config.yaml
.mulch/expertise/: agents.jsonl  architecture.jsonl  froggy.jsonl  integration.jsonl  tools.jsonl
.overstory/: config.yaml  groups.json
.seeds/: config.yaml  issues.jsonl
froggy/: __init__.py  __main__.py  backends.py  cli.py  config.py  context.py  discovery.py  download.py  llmfit.py  mcp_client.py  models.py  paths.py  saved_models.py  session.py  tool_executor.py  tool_parser.py  tool_selector.py  tools.py
scripts/: hf-download.py  run-heretic.ps1
specs/: tiny_tools_spec.md  upgrade_cli_spec.md
tests/: test_backends.py  test_cli_config.py  test_cli_group.py  test_cli_management.py  test_commands.py  test_config.py  test_context.py  test_custom_tools.py  test_discovery.py  test_download.py  test_llmfit.py  test_mcp.py  test_mlx.py  test_models.py  test_ollama.py  test_openrouter.py  test_paths.py  test_streaming.py  test_tool_executor.py  test_tool_integration.py  test_tool_parser.py  test_tool_safety.py  test_tools.py  test_vmlx.py
